# x-cli-py

./: .gitignore  LICENSE  README.md  pyproject.toml  x-cli.py
x_cli_py/: main.py  theme.py  xcli.py
x_cli_py/commands/: post.py  setup.py  timeline.py  whoami.py
